# serde-seeded-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml  README.md
derive/src/: attributes.rs  lib.rs  utils.rs
derive/src/de/: enum.rs  mod.rs
derive/src/de/fields/: mod.rs  named.rs  unnamed.rs
derive/src/ser/: fields.rs  mod.rs
src/: de.rs  lib.rs  ser.rs
tests/: derive_de.rs  derive_ser.rs
