[package]
name = "serde-seeded-derive"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.89"
syn = "2.0.87"
quote = "1.0.37"
proc-macro-error = "1.0.4"
thiserror.workspace = true